// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/vsts/helpers getRef should be get the ref 1`] = `
Array [
  Object {
    "objectId": 132,
  },
]
`;

exports[`platform/vsts/helpers getRef should be get the ref 2`] = `
Array [
  Object {
    "objectId": 132,
  },
]
`;

exports[`platform/vsts/helpers getRenovatePRFormat should be formated (closed v2) 1`] = `
Object {
  "displayNumber": "Pull Request #undefined",
  "isClosed": true,
  "number": undefined,
  "status": 3,
}
`;

exports[`platform/vsts/helpers getRenovatePRFormat should be formated (closed) 1`] = `
Object {
  "displayNumber": "Pull Request #undefined",
  "isClosed": true,
  "number": undefined,
  "status": 2,
}
`;

exports[`platform/vsts/helpers getRenovatePRFormat should be formated (isUnmergeable) 1`] = `
Object {
  "displayNumber": "Pull Request #undefined",
  "isClosed": false,
  "isUnmergeable": true,
  "mergeStatus": 2,
  "number": undefined,
}
`;

exports[`platform/vsts/helpers getRenovatePRFormat should be formated (not closed) 1`] = `
Object {
  "displayNumber": "Pull Request #undefined",
  "isClosed": false,
  "number": undefined,
  "status": 1,
}
`;

exports[`platform/vsts/helpers getVSTSBranchObj should be the branch object formated 1`] = `
Object {
  "name": "refs/heads/branchName",
  "oldObjectId": "132",
}
`;

exports[`platform/vsts/helpers getVSTSCommitObj should be get the commit obj formated 1`] = `
Object {
  "author": Object {
    "name": "VSTS Renovate",
  },
  "changes": Array [
    Object {
      "changeType": 2,
      "item": Object {
        "path": "./myFilePath/test",
      },
      "newContent": Object {
        "Content": "Hello world!",
        "ContentType": 0,
      },
    },
  ],
  "comment": "Commit msg",
  "committer": Object {
    "name": "VSTS Renovate",
  },
}
`;

exports[`platform/vsts/helpers max4000Chars should be the same 1`] = `"Hello"`;
